# Personal_Learning_Record

./: README.md
Advanced Learning/Linux驱动/: README.md
Advanced Learning/Linux驱动/2.Note/01 启动分析/: 笔记.txt
Advanced Learning/Linux驱动/3.Practise/01_led/: led.c
Advanced Learning/Linux驱动/3.Practise/02_key/: key.c
Advanced Learning/Linux驱动/3.Practise/10_led_key/: Makefile  key_drv.c  led_drv.c  test.c
Advanced Learning/Linux驱动/3.Practise/11_SR04/: Makefile  SR04_drv.c  test.c
Advanced Learning/Linux驱动/3.Practise/12_led_key_sr04/: SR04_drv.c  beep_drv.c  led_drv.c  test.c
Advanced Learning/Linux驱动/3.Practise/13_gpio_led_key_sr04/: Makefile  SR04_drv.c  (+4 more)
Advanced Learning/设计模式/: .gitignore  README.md
Advanced Learning/设计模式/02.FactoryMethod/: CMakeLists.txt
Advanced Learning/设计模式/05.PrototypePattern/: README.md
Advanced Learning/设计模式/06.Singleton/: CMakeLists.txt
Advanced Learning/设计模式/20.ObserverPattern/: CMakeLists.txt
Advanced Learning/设计模式/20.ObserverPattern/2.Code/: AllyCenter.cpp  AllyCenter.h  Demo.h  Observer.h  common.h  main.cpp
Advanced Learning/设计模式/22.StrategyPattern/: CMakeLists.txt  README.md
Advanced Learning/设计模式/23.TemplateMethodPattern/: CMakeLists.txt  README.md
basic-learning/CPP/: README.md
basic-learning/Linux应用/: README.md
basic-learning/Linux应用/0.linux学习笔记/: 0-vim与shell脚本.c  1-新手Linux命令.c  1-程序调试.c  2-文件系统.c  tags
basic-learning/PYTHON/: README.md
basic-learning/PYTHON/1.入门/: update.py
basic-learning/PYTHON/4.面试/: python3在线编程输入输出总结.py  格式化输出.py
basic-learning/PYTHON/5.算法学习/: 排序算法实现.py
basic-learning/QT/: README.md
(+629 files in other folders)
